CustomObjects/objects/blng__PaymentAllocationInvoice__c.object
<CustomObject>
    <fields>
        <fullName>blng__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>blng__Invoice__c</referenceTo>
        <relationshipName>PaymentInvoiceAllocations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>blng__Payment__c</referenceTo>
        <relationshipName>Payment_Invoice_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TypeAllocationUnallocation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Unallocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unallocated?</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Allocation (Invoice)</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Allocations (Invoice)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>